--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Start on Heroku: Node.js",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
+  "name": "Food Finder",
+  "description": "Find food near you using browser location data",
+  "repository": "https://github.com/kevincart/js_portfolio",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
+  "keywords": ["food", "googleapi", "express", "node"],
   "image": "heroku/nodejs"
 }
