--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js apiKey='foobar'"
   },
   "dependencies": {
     "ejs": "2.4.1",
