--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js apiKey='foobar'"
+    "start": "nodemon index.js apiKey='foobar'"
   },
   "dependencies": {
     "ejs": "2.4.1",
     "express": "4.13.3",
+    "nodemon": "^1.11.0",
     "pg": "4.x",
     "request": "^2.81.0"
   },
