--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "jasmine-node spec"
   },
   "dependencies": {
     "dotenv": "^4.0.0",
