--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "ejs": "2.4.1",
     "express": "4.13.3",
+    "jasmine": "^2.8.0",
     "nodemon": "^1.11.0",
     "request": "^2.81.0"
   },
